dto record로 변환 및 post crud 수정중